all that js files have to be included

--- a/index.html
+++ b/index.html
@@ -11,7 +11,12 @@
 		<link rel="stylesheet" type="text/css" href="data/styles/main.css">
 		<meta charset="UTF-8">
 		<script src="data/scripts/main.js"></script>
+		<script src="data/scripts/miscellaneous.js"></script>
 		<script src="data/scripts/Terminal.js"></script>
+		<script src="data/scripts/Request.js"></script>
+		<script src="data/scripts/Events.js"></script>
+		<script src="data/scripts/Program.js"></script>
+		<script src="data/scripts/Shell.js"></script>
 	</head>
 	<body>
 		<noscript>
