include of all that nice programs. :3

--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
 		<script src="data/scripts/Events.js"></script>
 		<script src="data/scripts/Program.js"></script>
 		<script src="data/scripts/Shell.js"></script>
+		<script src="data/scripts/programs/Hello.js"></script>
+		<script src="data/scripts/programs/Whoami.js"></script>
+		<script src="data/scripts/programs/Echo.js"></script>
 	</head>
 	<body>
 		<noscript>
