added ls file to index

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 		<script src="data/scripts/programs/Hello.js"></script>
 		<script src="data/scripts/programs/Whoami.js"></script>
 		<script src="data/scripts/programs/Echo.js"></script>
+		<script src="data/scripts/programs/Ls.js"></script>
 	</head>
 	<body>
 		<noscript>
