i added libs for encoding and hashing in client space (passwords will be hashed a second time on the server (see setup.php and su.php) for more security) and i included the following programs: su, pwd, cd

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 		<meta charset="UTF-8">
 		<script src="data/scripts/main.js"></script>
 		<script src="data/scripts/miscellaneous.js"></script>
+		<script src="data/scripts/sha256.js"></script>
+		<script src="data/scripts/utf8.js"></script>
 		<script src="data/scripts/Terminal.js"></script>
 		<script src="data/scripts/Request.js"></script>
 		<script src="data/scripts/Events.js"></script>
@@ -21,6 +23,9 @@
 		<script src="data/scripts/programs/Whoami.js"></script>
 		<script src="data/scripts/programs/Echo.js"></script>
 		<script src="data/scripts/programs/Ls.js"></script>
+		<script src="data/scripts/programs/Su.js"></script>
+		<script src="data/scripts/programs/Pwd.js"></script>
+		<script src="data/scripts/programs/Cd.js"></script>
 	</head>
 	<body>
 		<noscript>
