--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 		<script src="data/scripts/programs/Su.js"></script>
 		<script src="data/scripts/programs/Pwd.js"></script>
 		<script src="data/scripts/programs/Cd.js"></script>
+		<script src="data/scripts/programs/Cat.js"></script>
 	</head>
 	<body>
 		<noscript>
